hphp/hack/test/typecheck/reactive/test_freeze1.php.coeffects.exp
File "test_freeze1.php", line 13, characters 3-10:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "test_freeze1.php", line 9, characters 17-18:
  The local (enclosing) context provides the capability set {}
